--- a/teteSuperieure.html
+++ b/teteSuperieure.html
@@ -3,29 +3,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>newsletter</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <title>Newsletter - KYOCERA Document Solutions</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            color: #333;
+        }
+        .newsletter-container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 15px 0;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+        .newsletter-section {
+            margin: 20px 0;
+            padding: 15px;
+            border: 1px solid #eee;
+            border-radius: 5px;
+        }
+        .gallery-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+            gap: 10px;
+            margin: 15px 0;
+        }
+        .gallery-item {
+            position: relative;
+            overflow: hidden;
+            border-radius: 5px;
+        }
+        .gallery-item img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+        .gallery-item:hover img {
+            transform: scale(1.05);
+        }
+        .two-column-layout {
+            display: flex;
+            gap: 20px;
+        }
+        .column {
+            flex: 1;
+        }
+        @media (max-width: 768px) {
+            .two-column-layout {
+                flex-direction: column;
+            }
+        }
+        /* Ensure images maintain their aspect ratio */
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        /* Make sure tables are responsive */
+        table {
+            width: 100% !important;
+            max-width: 100%;
+            table-layout: fixed;
+        }
+    </style>
 </head>
 <body>
-    <div class="newsletter-content">
-        <div class="image-wrapper position-absolute" tabindex="0" style="display: inline-block; margin: 15px auto; position: relative; left: 625px; top: 436px; z-index: 1;" draggable="true"><img src="https://i.ytimg.com/vi/9AhMaPGrNoM/maxresdefault.jpg" alt="Image URL" data-original-src="https://i.ytimg.com/vi/9AhMaPGrNoM/maxresdefault.jpg" style="max-width: 100%; height: 327.224px; margin: 10px 0px; border-radius: 8px; box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 8px; width: 582px;" class=""><button class="image-delete-btn" title="Supprimer l'image" style="position: absolute; top: -10px; right: -10px; width: 24px; height: 24px; border-radius: 50%; background-color: rgb(220, 53, 69); color: white; border: 2px solid white; cursor: pointer; display: none; z-index: 1000; font-size: 12px; line-height: 1; box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 4px;"><i class="fas fa-times"></i></button></div><div class="newsletter-section article-section" style="margin: 30px 0px; padding: 25px; border-left: 4px solid rgb(0, 123, 255); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px;">
-            <div class="article-header" style="margin-bottom: 20px;">
-                <h2 contenteditable="true" style="margin: 0px 0px 10px;"><span style="font-size: 52px; line-height: 1.2; font-weight: bold;">Video Test</span><span style="font-size: 52px; line-height: 1.2; font-weight: bold;"></span><span style="font-size: 52px; line-height: 1.2; font-weight: bold;"></span></h2>
-                <div class="article-meta" style="background-color: rgb(255, 255, 255); color: rgb(102, 102, 102); font-size: 14px; border-bottom: 1px solid rgb(238, 238, 238); padding-bottom: 15px;">
-                    <span contenteditable="true"></span></div></div><span style="font-size: 14px;"><span style="font-size: 14px;"><div class="article-header" style="margin-bottom: 20px;"><div class="article-meta" style="background-color: rgb(255, 255, 255); color: rgb(102, 102, 102); font-size: 14px; border-bottom: 1px solid rgb(238, 238, 238); padding-bottom: 15px;"><span contenteditable="true">Par: Nom de l'auteur</span> | 
-                    <span contenteditable="true">Catégorie: Actualités</span> | 
-                    <span>17/09/2025</span>
+    <div class="newsletter-container">
+        <div class="newsletter-section two-column-layout syc-item" style="display: flex; gap: 20px; margin: 30px 0px; padding: 20px; background-color: rgb(248, 249, 250); border-radius: 8px;">
+            <div class="column" style="flex: 1; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
+                <div contenteditable="true">
+                    <h3>Syc Item - Titre 1</h3>
+                    <p>Contenu de l'élément 1. Ajoutez du texte, des images et d'autres éléments ici.</p>
                 </div>
             </div>
-            <div class="article-content" style="background-color: rgb(255, 255, 255); line-height: 1.8;">
-                <p contenteditable="true" style="margin-bottom: 15px;">Cliquez ici pour écrire le contenu de votre article. Vous pouvez ajouter plusieurs paragraphes, des images et du formatage.</p>
-                <p contenteditable="true" style="margin-bottom: 15px;">Deuxième paragraphe de votre article. Continuez à développer votre contenu ici.</p></div></span></span><div class="article-content" style="background-color: rgb(255, 255, 255); line-height: 1.8;"><p contenteditable="true" style="margin-bottom: 15px;"></p>
+            <div class="column" style="flex: 1; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
+                <div class="image-placeholder" style="border: 2px dashed #ccc; padding: 40px; text-align: center; cursor: pointer; border-radius: 8px;">
+                    <i class="fas fa-image" style="font-size: 24px; color: #6c757d; margin-bottom: 10px;"></i>
+                    <p style="color: #6c757d; margin: 0;">Cliquez pour ajouter une image</p>
+                </div>
+                <div contenteditable="true" style="margin-top: 20px;">
+                    <h3>Syc Item - Titre 2</h3>
+                    <p>Contenu de l'élément 2.</p>
+                </div>
             </div>
-            <div class="article-footer" style="background-color: rgb(255, 255, 255); margin-top: 20px; padding-top: 15px; border-top: 1px solid rgb(238, 238, 238);">
-                <p contenteditable="true" style="color: #888; font-size: 14px;">Publié le: <span style="font-weight: bold;">17/09/2025</span></p>
-            </div>
-        </div><p><br></p><p><iframe width="560" height="315" src="https://www.youtube.com/embed/ONiDALBloGs" frameborder="0" allowfullscreen="" style="max-width: 100%; margin: 10px 0;"></iframe><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p>
+        </div><p><br></p><iframe width="560" height="315" src="https://www.youtube.com/embed/ONiDALBloGs" frameborder="0" allowfullscreen="" style="max-width: 100%; margin: 10px 0;"></iframe>
     </div>
 </body>
 </html>
