--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
 
                 <div class="newsletter-hero">
                     <a href="newsletter.html?page=1">
-                        <img src="Image/45_PRT_PA3500wx_comb03_front_01.jpg" alt="Comptez sur nous — Juin 2025" />
+                        <img src="Image/page1.png" alt="Comptez sur nous — Juin 2025" />
                     </a>
                 </div>
 
                 <p class="lead">Bienvenue dans notre édition de juin. Découvrez les temps forts, conseils et ressources pour optimiser vos espaces de travail intelligents.</p>
 
                 <div class="section-divider"></div>
-                <h2>Dans ce numéro</h2>
+                <h2>Actualités du jour</h2>
                 <section class="cards-grid kyo-tiles">
                     <article class="kyo-tile">
                         <a class="kyo-tile-media" href="newsletter.html?page=2">
-                            <img src="Image/page1.png" alt="Sommaire" />
+                            <img src="Image/page2.png" alt="Sommaire — Comptez sur nous" loading="lazy" decoding="async" />
                             <span class="kyo-tile-plus">+</span>
                         </a>
                         <div class="kyo-tile-body">
@@ -106,7 +106,7 @@
 
                     <article class="kyo-tile">
                         <a class="kyo-tile-media" href="newsletter.html?page=3">
-                            <img src="Image/page2.png" alt="Webinar spécial Cloud le 26 juin 2025" />
+                            <img src="Image/page3.png" alt="Webinar spécial Cloud — 26 juin 2025" loading="lazy" decoding="async" fetchpriority="low" />
                             <span class="kyo-tile-plus">+</span>
                         </a>
                         <div class="kyo-tile-body">
@@ -117,7 +117,7 @@
 
                     <article class="kyo-tile">
                         <a class="kyo-tile-media" href="newsletter.html?page=4">
-                            <img src="Image/page3.png" alt="Formation commerciale" />
+                            <img src="Image/page4.png" alt="Formation commerciale — sessions adaptées" loading="lazy" decoding="async" fetchpriority="low" />
                             <span class="kyo-tile-plus">+</span>
                         </a>
                         <div class="kyo-tile-body">
