--- a/modèle_newsletter.html
+++ b/modèle_newsletter.html
@@ -97,6 +97,9 @@
                     <button class="option-btn" id="localVideoBtn">
                         <i class="fas fa-file-video"></i> Vidéo locale
                 </button>
+                    <button class="option-btn" id="standardizeVideosBtn">
+                        <i class="fas fa-magic"></i> Standardiser vidéos
+                    </button>
         </div>
             </div>
 
