--- a/teteSuperieure.html
+++ b/teteSuperieure.html
@@ -92,8 +92,8 @@
         <div class="newsletter-section two-column-layout syc-item" style="display: flex; gap: 20px; margin: 30px 0px; padding: 20px; border-radius: 8px;">
             <div class="column" style="background-image: initial; background-position: initial; background-size: initial; background-repeat: initial; background-attachment: initial; background-origin: initial; background-clip: initial; flex: 1 1 0%; padding: 20px; border-radius: 8px; box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 4px;">
                 <div contenteditable="true" style="">
-                    <h3 style=""><span style="font-size: 52px; line-height: 1.2; font-weight: bold;">Hero page</span></h3>
-                    <p style="background-color: white;">Hero page should be put in top&nbsp;</p>
+                    <h3 style=""><span style="font-size: 52px; line-height: 1.2; font-weight: bold;">The hero page</span></h3>
+                    <p style="background-color: white;"><span style="font-size: 14px;"><span style="font-size: 14px;">Hero page is top of the index page</span></span></p>
                 </div>
             </div>
             <div class="column" style="background: white; flex: 1 1 0%; padding: 20px; border-radius: 8px; box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 4px;">
@@ -102,7 +102,7 @@
                     <h3><br></h3>
                 </div>
             </div>
-        </div><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<iframe width="560" height="315" src="https://www.youtube.com/embed/ONiDALBloGs" frameborder="0" allowfullscreen="" style="max-width: 100%; margin: 10px 0;"></iframe><br></p>
+        </div><table style="width: 100%; border-collapse: collapse; margin: 20px 0px;"><tbody><tr><th contenteditable="true" style="border: 1px solid rgb(221, 221, 221); padding: 8px; text-align: left; background-color: rgb(240, 100, 0); transition: background-color 0.2s;">En-tête 1</th><th contenteditable="true" style="border: 1px solid rgb(221, 221, 221); padding: 8px; text-align: left; background-color: rgb(240, 100, 0); transition: background-color 0.2s;">En-tête 2</th><th contenteditable="true" style="border: 1px solid rgb(221, 221, 221); padding: 8px; text-align: left; background-color: rgb(240, 100, 0); transition: background-color 0.2s;">En-tête 3</th></tr><tr><td contenteditable="true" style="border: 1px solid rgb(221, 221, 221); padding: 8px; text-align: left;">Cellule 1,1</td><td contenteditable="true" style="border: 1px solid rgb(221, 221, 221); padding: 8px; text-align: left;">Cellule 1,2</td><td contenteditable="true" style="border: 1px solid rgb(221, 221, 221); padding: 8px; text-align: left;">Cellule 1,3</td></tr><tr><td contenteditable="true" style="border: 1px solid rgb(221, 221, 221); padding: 8px; text-align: left;">Cellule 2,1</td><td contenteditable="true" style="border: 1px solid rgb(221, 221, 221); padding: 8px; text-align: left;">Cellule 2,2</td><td contenteditable="true" style="border: 1px solid rgb(221, 221, 221); padding: 8px; text-align: left;">Cellule 2,3</td></tr></tbody></table><p><br></p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<iframe width="560" height="315" src="https://www.youtube.com/embed/ONiDALBloGs" frameborder="0" allowfullscreen="" style="max-width: 100%; margin: 10px 0;"></iframe>&nbsp;<br></p><p><br></p>
     </div>
 </body>
 </html>
