the change image button

--- a/modèle_newsletter.html
+++ b/modèle_newsletter.html
@@ -330,6 +330,10 @@
         </div>
             <div class="toolbar-divider"></div>
             <div class="toolbar-section">
+                <button class="image-tool" id="changeImageBtn"><i class="fas fa-image"></i> Changer l'image</button>
+            </div>
+            <div class="toolbar-divider"></div>
+            <div class="toolbar-section">
                 <div class="dropdown">
                     <button class="image-tool dropdown-btn" id="positionBtn">
                         <i class="fas fa-arrows-alt"></i> Position <i class="fas fa-caret-down"></i>
