update the image floating tools

--- a/Tarif/download_koesio.html
+++ b/Tarif/download_koesio.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="login_page/styles/dye-pattern.css">
     <script src="src/auth.js"></script>
     <script src="src/download-helper.js"></script>
+    <link rel="stylesheet" href="src/download-bulk.css">
+    <script src="src/download-bulk.js"></script>
     <script>
         checkAccess('Tarif Koesio');
     </script>
+
     <script>
         if (
             document.referrer && document.referrer.indexOf(window.location.origin) !== 0
