--- a/Tarif/download_public.html
+++ b/Tarif/download_public.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="login_page/styles/dye-pattern.css">
     <script src="src/auth.js"></script>
     <script src="src/download-helper.js"></script>
+    <link rel="stylesheet" href="src/download-bulk.css">
+    <script src="src/download-bulk.js"></script>
     <script>
         checkAccess('Tarif public');
     </script>
