--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                 <div class="newsletter-hero">
                     <a href="newsletter.html?page=1">
-                        <img src="Image/page1.png" alt="Comptez sur nous — Juin 2025" />
+                        <img src="Image/teteSuperieure.png" alt="Comptez sur nous — Juin 2025" />
                     </a>
                 </div>
 
@@ -95,7 +95,7 @@
                 <section class="cards-grid kyo-tiles">
                     <article class="kyo-tile">
                         <a class="kyo-tile-media" href="newsletter.html?page=2">
-                            <img src="Image/page2.png" alt="Sommaire — Comptez sur nous" loading="lazy" decoding="async" />
+                            <img src="Image/contenuDeGauche.png" alt="Sommaire — Comptez sur nous" loading="lazy" decoding="async" />
                             <span class="kyo-tile-plus">+</span>
                         </a>
                         <div class="kyo-tile-body">
@@ -106,7 +106,7 @@
 
                     <article class="kyo-tile">
                         <a class="kyo-tile-media" href="newsletter.html?page=3">
-                            <img src="Image/page3.png" alt="Webinar spécial Cloud — 26 juin 2025" loading="lazy" decoding="async" fetchpriority="low" />
+                            <img src="Image/contenuCentral.png" alt="Webinar spécial Cloud — 26 juin 2025" loading="lazy" decoding="async" fetchpriority="low" />
                             <span class="kyo-tile-plus">+</span>
                         </a>
                         <div class="kyo-tile-body">
@@ -117,7 +117,7 @@
 
                     <article class="kyo-tile">
                         <a class="kyo-tile-media" href="newsletter.html?page=4">
-                            <img src="Image/page4.png" alt="Formation commerciale — sessions adaptées" loading="lazy" decoding="async" fetchpriority="low" />
+                            <img src="Image/contenuDeDroite.png" alt="Formation commerciale — sessions adaptées" loading="lazy" decoding="async" fetchpriority="low" />
                             <span class="kyo-tile-plus">+</span>
                         </a>
                         <div class="kyo-tile-body">
@@ -127,39 +127,7 @@
                     </article>
                 </section>
 
-                <div class="section-divider"></div>
-
-                <!-- Webinars - Two Columns (Fallback: no upcoming webinars) -->
-                <section class="webinars-two-col">
-                    <div class="webinars-col-left">
-                        <div class="sujette-title">Replays & Alertes</div>
-                        <p class="font-size-14" style="margin: 14px 0 18px;">
-                            Aucun webinar à venir pour le moment. Consultez nos replays et recevez une alerte pour les prochains.
-                        </p>
-                    </div>
-
-                    <div class="webinars-col-right">
-                        <a class="webinar-card" href="contenuWebinars.html">
-                            <div class="webinar-card-media">
-                                <i class="fas fa-circle-play" aria-hidden="true"></i>
-                            </div>
-                            <div class="webinar-card-body">
-                                <h3>Voir tous les replays</h3>
-                                <p class="font-size-14">Accédez aux enregistrements et ressources.</p>
-                            </div>
-                        </a>
-
-                        <a class="webinar-card" href="inscription.html">
-                            <div class="webinar-card-media alt">
-                                <i class="fas fa-bell" aria-hidden="true"></i>
-                            </div>
-                            <div class="webinar-card-body">
-                                <h3>Être averti des prochains webinars</h3>
-                                <p class="font-size-14">Inscrivez-vous pour recevoir une notification.</p>
-                            </div>
-                        </a>
-                    </div>
-                </section>
+                
             </div>
         </div>
     </main>
