--- a/moosend_template.html
+++ b/moosend_template.html
@@ -37,7 +37,7 @@
                 <tr>
                   <td valign="middle" style="width:48px;">
                     <a href="https://www.kyoceradocumentsolutions.fr/fr.html" style="text-decoration:none;">
-                      <img src="{{BASE_URL}}/Image/logo.png" alt="KYOCERA" width="120" style="display:block; border:0; outline:none; text-decoration:none; height:auto;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/logo.png" alt="KYOCERA" width="120" style="display:block; border:0; outline:none; text-decoration:none; height:auto;">
                     </a>
                   </td>
                   <td valign="middle" align="right" style="font-family: Arial, Helvetica, sans-serif; font-size:12px; color:#111;">
@@ -51,7 +51,7 @@
           <!-- Hero -->
           <tr>
             <td align="left" style="padding:0;">
-              <img src="{{BASE_URL}}/Image/teteSuperieure.png" alt="Comptez sur nous — Juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+              <img src="https://kyoceratest.github.io/newsletter/Image/teteSuperieure.png" alt="Comptez sur nous — Juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
             </td>
           </tr>
 
@@ -92,8 +92,8 @@
               <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;">
                 <tr>
                   <td style="padding:0 0 10px 0;">
-                    <a href="{{BASE_URL}}/newsletter.html?page=2" style="text-decoration:none;">
-                      <img src="{{BASE_URL}}/Image/contenuDeGauche.png" alt="Sommaire — Comptez sur nous" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                    <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=2" style="text-decoration:none;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuDeGauche.png" alt="Sommaire — Comptez sur nous" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
@@ -113,8 +113,8 @@
               <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;">
                 <tr>
                   <td style="padding:0 0 10px 0;">
-                    <a href="{{BASE_URL}}/newsletter.html?page=3" style="text-decoration:none;">
-                      <img src="{{BASE_URL}}/Image/contenuCentral.png" alt="Webinar spécial Cloud — 26 juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                    <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=3" style="text-decoration:none;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuCentral.png" alt="Webinar spécial Cloud — 26 juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
@@ -134,8 +134,8 @@
               <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;">
                 <tr>
                   <td style="padding:0 0 10px 0;">
-                    <a href="{{BASE_URL}}/newsletter.html?page=4" style="text-decoration:none;">
-                      <img src="{{BASE_URL}}/Image/contenuDeDroite.png" alt="Formation commerciale — sessions adaptées" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                    <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=4" style="text-decoration:none;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuDeDroite.png" alt="Formation commerciale — sessions adaptées" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
@@ -156,17 +156,17 @@
                 <tr>
                   <td style="padding:0 8px;">
                     <a href="https://www.facebook.com/KyoceraDocumentSolutionsFrance/" style="text-decoration:none;">
-                      <img src="{{BASE_URL}}/Image/facebook.png" alt="Facebook" width="28" style="display:block; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/facebook.png" alt="Facebook" width="28" style="display:block; border:0;">
                     </a>
                   </td>
                   <td style="padding:0 8px;">
                     <a href="https://www.linkedin.com/company/kyocera-document-solutions-france/posts/?feedView=all" style="text-decoration:none;">
-                      <img src="{{BASE_URL}}/Image/linkin.png" alt="LinkedIn" width="28" style="display:block; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/linkin.png" alt="LinkedIn" width="28" style="display:block; border:0;">
                     </a>
                   </td>
                   <td style="padding:0 8px;">
                     <a href="https://www.youtube.com/user/kdfrsas" style="text-decoration:none;">
-                      <img src="{{BASE_URL}}/Image/video.png" alt="YouTube" width="28" style="display:block; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/video.png" alt="YouTube" width="28" style="display:block; border:0;">
                     </a>
                   </td>
                 </tr>
