--- a/moosend_template.html
+++ b/moosend_template.html
@@ -22,13 +22,7 @@
     <tr>
       <td align="center" style="padding:24px 12px;">
         <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="600" style="width:600px; max-width:600px; background:#ffffff; border-collapse:collapse;">
-          <!-- View in browser bar -->
-          <tr>
-            <td align="right" style="padding:10px 16px; font-family: Arial, Helvetica, sans-serif; font-size:12px; color:#666;">
-              <a href="[[ViewInBrowser]]" style="color:#0a9bcd; text-decoration:underline;">Voir dans le navigateur</a>
-              <!-- Replace [[ViewInBrowser]] with your Moosend tag, if different -->
-            </td>
-          </tr>
+          <!-- View in browser removed per request -->
 
           <!-- Header -->
           <tr>
@@ -178,12 +172,7 @@
               ©2025 KYOCERA Document Solutions France S.A.S.
             </td>
           </tr>
-          <tr>
-            <td align="center" style="padding:0 24px 20px 24px; font-family: Arial, Helvetica, sans-serif; font-size:12px; color:#6b7280;">
-              <a href="[[UnsubscribeURL]]" style="color:#0a9bcd; text-decoration:underline;">Se désabonner</a>
-              <!-- Replace [[UnsubscribeURL]] with your Moosend unsubscribe tag, if different -->
-            </td>
-          </tr>
+          <!-- Unsubscribe link removed per request -->
         </table>
       </td>
     </tr>
