--- a/moosend_template.preview.html
+++ b/moosend_template.preview.html
@@ -21,11 +21,7 @@
     <tr>
       <td align="center" style="padding:24px 12px;">
         <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="600" style="width:600px; max-width:600px; background:#ffffff; border-collapse:collapse;">
-          <tr>
-            <td align="right" style="padding:10px 16px; font-family: Arial, Helvetica, sans-serif; font-size:12px; color:#666;">
-              <a href="[[ViewInBrowser]]" style="color:#0a9bcd; text-decoration:underline;">Voir dans le navigateur</a>
-            </td>
-          </tr>
+          <!-- View in browser removed to match template -->
 
           <tr>
             <td align="left" style="padding:20px 24px; border-bottom:1px solid #e5e7eb;">
@@ -166,11 +162,7 @@
               ©2025 KYOCERA Document Solutions France S.A.S.
             </td>
           </tr>
-          <tr>
-            <td align="center" style="padding:0 24px 20px 24px; font-family: Arial, Helvetica, sans-serif; font-size:12px; color:#6b7280;">
-              <a href="[[UnsubscribeURL]]" style="color:#0a9bcd; text-decoration:underline;">Se désabonner</a>
-            </td>
-          </tr>
+          <!-- Unsubscribe row removed to match template -->
         </table>
       </td>
     </tr>
