--- a/moosend_template.html
+++ b/moosend_template.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Comptez sur nous — Juin 2025</title>
+  <title>Page du h&#233;ros</title>
   <!-- Email-safe: inline CSS only, no external fonts or JS -->
 </head>
 <body style="margin:0; padding:0; background-color:#f3f4f6;">
@@ -14,9 +14,7 @@
   <![endif]-->
 
   <!-- Preheader (hidden preview text) -->
-  <div style="display:none; font-size:1px; color:#f3f4f6; line-height:1px; max-height:0; max-width:0; opacity:0; overflow:hidden;">
-    Découvrez les temps forts, conseils et ressources pour optimiser vos espaces de travail intelligents.
-  </div>
+  <div style="display:none; font-size:1px; color:#f3f4f6; line-height:1px; max-height:0; max-width:0; opacity:0; overflow:hidden;">Conserver comme h&#233;ros pour contacter</div>
 
   <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%" style="background-color:#f3f4f6;">
     <tr>
@@ -40,29 +38,29 @@
                 </tr>
               </table>
             </td>
-          </tr>
-
           <!-- Hero -->
           <tr>
             <td align="left" style="padding:0;">
-              <img src="https://kyoceratest.github.io/newsletter/Image/teteSuperieure.png" alt="Comptez sur nous — Juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+              <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=1" style="text-decoration:none;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/teteSuperieure.png" alt="Comptez sur nous &#8212; Septembre 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+              </a>
             </td>
           </tr>
 
           <!-- Intro copy -->
           <tr>
             <td align="left" style="padding:20px 24px 8px 24px;">
-              <div style="font-family: Arial, Helvetica, sans-serif; font-size:12px; color:#6b7280; text-transform:uppercase; letter-spacing:0.3px;">Newsletter — Juin 2025</div>
+              <div style="font-family: Arial, Helvetica, sans-serif; font-size:12px; color:#6b7280; text-transform:uppercase; letter-spacing:0.3px;">Newsletter &#8212; Septembre 2025</div>
             </td>
           </tr>
           <tr>
             <td align="left" style="padding:0 24px 8px 24px;">
-              <h1 style="margin:0; font-family: Arial, Helvetica, sans-serif; font-size:24px; line-height:1.3; color:#111827; font-weight:bold;">Comptez sur nous — Juin 2025</h1>
+              <h1 style="margin:0; font-family: Arial, Helvetica, sans-serif; font-size:24px; line-height:1.3; color:#111827; font-weight:bold;">Page du h&#233;ros</h1>
             </td>
           </tr>
           <tr>
             <td align="left" style="padding:0 24px 18px 24px;">
-              <p style="margin:0; font-family: Arial, Helvetica, sans-serif; font-size:14px; line-height:1.6; color:#374151;">Bienvenue dans notre édition de juin. Découvrez les temps forts, conseils et ressources pour optimiser vos espaces de travail intelligents.</p>
+              <p style="margin:0; font-family: Arial, Helvetica, sans-serif; font-size:14px; line-height:1.6; color:#374151;">Conserver comme h&#233;ros pour contacter</p>
             </td>
           </tr>
 
@@ -76,7 +74,7 @@
           <!-- Section title -->
           <tr>
             <td align="left" style="padding:16px 24px 8px 24px;">
-              <h2 style="margin:0; font-family: Arial, Helvetica, sans-serif; font-size:18px; line-height:1.4; color:#111827;">Actualités du jour</h2>
+              <h2 style="margin:0; font-family: Arial, Helvetica, sans-serif; font-size:18px; line-height:1.4; color:#111827;">Actualit&#233;s du jour</h2>
             </td>
           </tr>
 
@@ -87,14 +85,14 @@
                 <tr>
                   <td style="padding:0 0 10px 0;">
                     <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=2" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuDeGauche.png" alt="Sommaire — Comptez sur nous" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuDeGauche.png" alt="Sommaire &#8212; Comptez sur nous" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
                 <tr>
                   <td style="font-family: Arial, Helvetica, sans-serif;">
-                    <h3 style="margin:0 0 6px 0; font-size:16px; line-height:1.4; color:#111827;">Sommaire</h3>
-                    <p style="margin:0; font-size:14px; line-height:1.6; color:#374151;">L'édito de Benjamin Claus</p>
+                    <h3 style="margin:0 0 6px 0; font-size:16px; line-height:1.4; color:#111827;">Page de gauche de trois colonnes</h3>
+                    <p style="margin:0; font-size:14px; line-height:1.6; color:#374151;">Page de gauche de trois colonnes</p>
                   </td>
                 </tr>
               </table>
@@ -108,14 +106,14 @@
                 <tr>
                   <td style="padding:0 0 10px 0;">
                     <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=3" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuCentral.png" alt="Webinar spécial Cloud — 26 juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuCentral.png" alt="Webinar sp&#233;cial Cloud &#8212; 26 juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
                 <tr>
                   <td style="font-family: Arial, Helvetica, sans-serif;">
-                    <h3 style="margin:0 0 6px 0; font-size:16px; line-height:1.4; color:#111827;">Webinar spécial Cloud le 26 juin 2025</h3>
-                    <p style="margin:0; font-size:14px; line-height:1.6; color:#374151;">Comment booster sa performance documentaire grâce au Cloud ?</p>
+                    <h3 style="margin:0 0 6px 0; font-size:16px; line-height:1.4; color:#111827;">Page centrale &#224; trois colonnes</h3>
+                    <p style="margin:0; font-size:14px; line-height:1.6; color:#374151;">Page centrale &#224; trois colonnes</p>
                   </td>
                 </tr>
               </table>
@@ -129,14 +127,14 @@
                 <tr>
                   <td style="padding:0 0 10px 0;">
                     <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=4" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuDeDroite.png" alt="Formation commerciale — sessions adaptées" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuDeDroite.png" alt="Formation commerciale &#8212; sessions adapt&#233;es" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
                 <tr>
                   <td style="font-family: Arial, Helvetica, sans-serif;">
-                    <h3 style="margin:0 0 6px 0; font-size:16px; line-height:1.4; color:#111827;">Formation commerciale</h3>
-                    <p style="margin:0; font-size:14px; line-height:1.6; color:#374151;">Des sessions adaptées à vos besoins</p>
+                    <h3 style="margin:0 0 6px 0; font-size:16px; line-height:1.4; color:#111827;">Page &#224; trois colonnes (alignement &#224; droite)</h3>
+                    <p style="margin:0; font-size:14px; line-height:1.6; color:#374151;">Page &#224; trois colonnes (alignement &#224; droite)</p>
                   </td>
                 </tr>
               </table>
@@ -169,7 +167,7 @@
           </tr>
           <tr>
             <td align="center" style="padding:8px 24px 4px 24px; font-family: Arial, Helvetica, sans-serif; font-size:12px; color:#6b7280;">
-              ©2025 KYOCERA Document Solutions France S.A.S.
+              &copy;2025 KYOCERA Document Solutions France S.A.S.
             </td>
           </tr>
           <!-- Unsubscribe link removed per request -->
@@ -179,3 +177,9 @@
   </table>
 </body>
 </html>
+
+
+
+
+
+
