--- a/moosend_template.html
+++ b/moosend_template.html
@@ -38,11 +38,12 @@
                 </tr>
               </table>
             </td>
+          </tr>
           <!-- Hero -->
           <tr>
             <td align="left" style="padding:0;">
               <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=1" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/teteSuperieure.png" alt="Comptez sur nous &#8212; Septembre 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/teteSuperieure.png" alt="Comptez sur nous &#8212; Septembre 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
               </a>
             </td>
           </tr>
@@ -85,7 +86,7 @@
                 <tr>
                   <td style="padding:0 0 10px 0;">
                     <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=2" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuDeGauche.png" alt="Sommaire &#8212; Comptez sur nous" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/contenuDeGauche.png" alt="Sommaire &#8212; Comptez sur nous" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
@@ -106,7 +107,7 @@
                 <tr>
                   <td style="padding:0 0 10px 0;">
                     <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=3" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuCentral.png" alt="Webinar sp&#233;cial Cloud &#8212; 26 juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/contenuCentral.png" alt="Webinar sp&#233;cial Cloud &#8212; 26 juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
@@ -127,7 +128,7 @@
                 <tr>
                   <td style="padding:0 0 10px 0;">
                     <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=4" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuDeDroite.png" alt="Formation commerciale &#8212; sessions adapt&#233;es" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/contenuDeDroite.png" alt="Formation commerciale &#8212; sessions adapt&#233;es" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
@@ -177,6 +178,7 @@
   </table>
 </body>
 </html>
+
 
 
 
