Moosend image link update

--- a/moosend_template.html
+++ b/moosend_template.html
@@ -29,7 +29,7 @@
                 <tr>
                   <td valign="middle" style="width:48px;">
                     <a href="https://www.kyoceradocumentsolutions.fr/fr.html" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/logo.png" alt="KYOCERA" width="120" style="display:block; border:0; outline:none; text-decoration:none; height:auto;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/logo.png" alt="KYOCERA" width="120" style="display:block; border:0; outline:none; text-decoration:none; height:auto;">
                     </a>
                   </td>
                   <td valign="middle" align="right" style="font-family: Arial, Helvetica, sans-serif; font-size:12px; color:#111;">
@@ -149,17 +149,17 @@
                 <tr>
                   <td style="padding:0 8px;">
                     <a href="https://www.facebook.com/KyoceraDocumentSolutionsFrance/" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/facebook.png" alt="Facebook" width="28" style="display:block; border:0;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/facebook.png" alt="Facebook" width="28" style="display:block; border:0;">
                     </a>
                   </td>
                   <td style="padding:0 8px;">
                     <a href="https://www.linkedin.com/company/kyocera-document-solutions-france/posts/?feedView=all" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/linkin.png" alt="LinkedIn" width="28" style="display:block; border:0;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/linkin.png" alt="LinkedIn" width="28" style="display:block; border:0;">
                     </a>
                   </td>
                   <td style="padding:0 8px;">
                     <a href="https://www.youtube.com/user/kdfrsas" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/video.png" alt="YouTube" width="28" style="display:block; border:0;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/video.png" alt="YouTube" width="28" style="display:block; border:0;">
                     </a>
                   </td>
                 </tr>
@@ -178,6 +178,7 @@
   </table>
 </body>
 </html>
+
 
 
 
