--- a/moosend_template.preview.html
+++ b/moosend_template.preview.html
@@ -29,7 +29,7 @@
                 <tr>
                   <td valign="middle" style="width:48px;">
                     <a href="https://www.kyoceradocumentsolutions.fr/fr.html" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/logo.png" alt="KYOCERA" width="120" style="display:block; border:0; outline:none; text-decoration:none; height:auto;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/logo.png" alt="KYOCERA" width="120" style="display:block; border:0; outline:none; text-decoration:none; height:auto;">
                     </a>
                   </td>
                   <td valign="middle" align="right" style="font-family: Arial, Helvetica, sans-serif; font-size:12px; color:#111;">
@@ -42,7 +42,7 @@
 
           <tr>
             <td align="left" style="padding:0;">
-              <img src="https://kyoceratest.github.io/newsletter/Image/teteSuperieure.png" alt="Comptez sur nous — Juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+              <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/teteSuperieure.png" alt="Comptez sur nous — Juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
             </td>
           </tr>
 
@@ -80,7 +80,7 @@
                 <tr>
                   <td style="padding:0 0 10px 0;">
                     <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=2" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuDeGauche.png" alt="Sommaire — Comptez sur nous" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/contenuDeGauche.png" alt="Sommaire — Comptez sur nous" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
@@ -100,7 +100,7 @@
                 <tr>
                   <td style="padding:0 0 10px 0;">
                     <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=3" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuCentral.png" alt="Webinar spécial Cloud — 26 juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/contenuCentral.png" alt="Webinar spécial Cloud — 26 juin 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
@@ -120,7 +120,7 @@
                 <tr>
                   <td style="padding:0 0 10px 0;">
                     <a href="https://kyoceratest.github.io/newsletter/newsletter.html?page=4" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/contenuDeDroite.png" alt="Formation commerciale — sessions adaptées" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/contenuDeDroite.png" alt="Formation commerciale — sessions adaptées" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
                     </a>
                   </td>
                 </tr>
@@ -140,17 +140,17 @@
                 <tr>
                   <td style="padding:0 8px;">
                     <a href="https://www.facebook.com/KyoceraDocumentSolutionsFrance/" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/facebook.png" alt="Facebook" width="28" style="display:block; border:0;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/facebook.png" alt="Facebook" width="28" style="display:block; border:0;">
                     </a>
                   </td>
                   <td style="padding:0 8px;">
                     <a href="https://www.linkedin.com/company/kyocera-document-solutions-france/posts/?feedView=all" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/linkin.png" alt="LinkedIn" width="28" style="display:block; border:0;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/linkin.png" alt="LinkedIn" width="28" style="display:block; border:0;">
                     </a>
                   </td>
                   <td style="padding:0 8px;">
                     <a href="https://www.youtube.com/user/kdfrsas" style="text-decoration:none;">
-                      <img src="https://kyoceratest.github.io/newsletter/Image/video.png" alt="YouTube" width="28" style="display:block; border:0;">
+                      <img src="https://cdn.jsdelivr.net/gh/kyoceratest/newsletter@main/Image/video.png" alt="YouTube" width="28" style="display:block; border:0;">
                     </a>
                   </td>
                 </tr>
