--- a/moosend_template.preview.html
+++ b/moosend_template.preview.html
@@ -134,6 +134,27 @@
             </td>
           </tr>
 
+          <!-- Tile 4: Tarif -->
+          <tr>
+            <td align="left" style="padding:10px 24px 20px 24px;">
+              <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;">
+                <tr>
+                  <td style="padding:0 0 10px 0;">
+                    <a href="https://kyoceratest.github.io/newsletter/Tarif/login_page/index.html" style="text-decoration:none;">
+                      <img src="./Image/tarif.png" alt="Tarif &#8212; Novembre 2025" width="600" style="display:block; width:100%; max-width:600px; height:auto; border:0;">
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="font-family: Arial, Helvetica, sans-serif;">
+                    <h3 style="margin:0 0 6px 0; font-size:16px; line-height:1.4; color:#111827;">Tarif &#8212; Novembre 2025</h3>
+                    <p style="margin:0; font-size:14px; line-height:1.6; color:#374151;">Cliquez pour t&eacute;l&eacute;charger votre tarif mis &agrave; jour ce mois-ci.</p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
           <tr>
             <td align="center" style="padding:18px 24px 6px 24px; border-top:1px solid #e5e7eb;">
               <table role="presentation" cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse;">
