link for image tools

--- a/modèle_newsletter.html
+++ b/modèle_newsletter.html
@@ -430,6 +430,7 @@
             <div class="toolbar-divider"></div>
             <div class="toolbar-section">
                 <button class="image-tool" id="changeImageBtn"><i class="fas fa-image"></i> Changer l'image</button>
+                <button class="image-tool" id="linkImageBtn"><i class="fas fa-link"></i> Lien</button>
             </div>
             <div class="toolbar-divider"></div>
             <div class="toolbar-section">
