--- a/teteSuperieure.html
+++ b/teteSuperieure.html
@@ -89,7 +89,7 @@
 </head>
 <body>
     <div class="newsletter-container">
-        <div style="text-align: center;"><span style="color: rgb(10, 155, 205); font-size: 52px; font-weight: bold;">Newsletter octobre 2025</span></div><div style="text-align: center;"><span style="color: rgb(10, 155, 205); font-size: 52px; font-weight: bold;"><video controls="" style="max-width: 100%; margin: 10px auto; width: 70%; display: block; height: auto; aspect-ratio: 16 / 9;"><source src="https://ftp.kyonet.fr/public/file/qc3wjf7pkkw6ak8dsgubaw/Edito%20octobre%202025.mp4" type="video/mp4">Votre navigateur ne supporte pas la vidéo.</video></span></div><div style="text-align: center;"><span style="color: rgb(10, 155, 205); font-size: 52px; font-weight: bold;"><br></span></div>
+        <div style="text-align: center;"><span style="font-size: 52px; line-height: 1.2; font-weight: bold;">Newsletter octobre 2025</span><span style="font-size: 52px; line-height: 1.2; font-weight: bold;"></span></div><div style="text-align: center;"><span style="color: rgb(10, 155, 205); font-size: 52px; font-weight: bold;"><video controls="" style="max-width: 100%; margin: 10px auto; width: 70%; display: block; height: auto; aspect-ratio: 16 / 9;"><source src="https://ftp.kyonet.fr/public/file/qc3wjf7pkkw6ak8dsgubaw/Edito%20octobre%202025.mp4" type="video/mp4">Votre navigateur ne supporte pas la vidéo.</video></span></div><div style="text-align: center;"><span style="color: rgb(10, 155, 205); font-size: 52px; font-weight: bold;"><br></span></div>
     </div>
 </body>
 </html>
