--- a/moosend_template.html
+++ b/moosend_template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Newsletter octobre 2025</title>
+  <title>Comptez sur nous &#8212; Juin 2025</title>
   <!-- Email-safe: inline CSS only, no external fonts or JS -->
 </head>
 <body style="margin:0; padding:0; background-color:#f3f4f6;">
@@ -56,7 +56,7 @@
           </tr>
           <tr>
             <td align="left" style="padding:0 24px 8px 24px;">
-              <h1 style="margin:0; font-family: Arial, Helvetica, sans-serif; font-size:24px; line-height:1.3; color:#111827; font-weight:bold;">Newsletter octobre 2025</h1>
+              <h1 style="margin:0; font-family: Arial, Helvetica, sans-serif; font-size:24px; line-height:1.3; color:#111827; font-weight:bold;">Comptez sur nous &#8212; Juin 2025</h1>
             </td>
           </tr>
           <tr>
@@ -199,6 +199,11 @@
   </table>
 </body>
 </html>
+
+
+
+
+
 
 
 
