update the newsletter

--- a/newsletter.html
+++ b/newsletter.html
@@ -133,10 +133,10 @@
                     <a href="https://www.kyoceradocumentsolutions.fr/fr/footer/data-request.html">Politique de gestion des données personnelles</a>
                     <a href="https://www.kyoceradocumentsolutions.fr/fr/footer/terms-of-use.html">Conditions d'utilisation et restrictions légales</a>
                     <a href="https://www.kyoceradocumentsolutions.fr/fr/footer/legal-notices.html">Conditions Générales de Vente</a>
-                    <a href="https://www.kyoceradocdocumentsolutions.fr/fr/gdpr-preferences.html">Gérer vos cookies</a>
+                    <a href="https://www.kyoceradocumentsolutions.fr/fr/gdpr-preferences.html">Gérer vos cookies</a>
                     <a href="https://www.kyoceradocumentsolutions.fr/fr/about-us/contact-us/press.html">Presse</a>
                 </div>
-                <div class="mobile-footer-copyright">©2025 KYOCERA Document Solutions France S.A.S.</div>
+                <div class="mobile-footer-copyright">2025 KYOCERA Document Solutions France S.A.S.</div>
             </div>
         </div>
     </footer>
